# Jex-os

./: .gitignore  .swp  Makefile  README.md  TCC_GUIDE.md  TODO.md  simple_test.c  test_hello.c  test_new.c
apps/: hello.c  hello_shebang.c  hello_tcc.c  test_stdlib.c  test_unistd.c
src/: boot.s  editor.c  editor.h  elf.c  elf.h  exec.c  exec.h  fat12.c  fat12.h  fs.c  fs.h  gdt.c  gdt.h  gdt_flush.s  hello_elf.h  ide.c  ide.h  idt.c  idt.h  interrupts.s  irq.c  irq.h  isr.c  isr.h  jexfs.c  jexfs.h  kernel.c  keyboard.c  kheap.c  kheap.h  multiboot.h  paging.c  paging.h  pmm.c  pmm.h  ports.h  power.c  power.h  rtc.c  rtc.h  (+14 more)
terminal_dashboard/: CMakeLists.txt
terminal_dashboard/src/: StatusWindow.cpp  StatusWindow.hpp  TaskWindow.cpp  TaskWindow.hpp  TuiEngine.cpp  TuiEngine.hpp  Window.cpp  Window.hpp  main.cpp
tools/: mkjexfs.c
user/: Makefile  hello.elf  test_stdlib.elf  test_unistd.elf  user.ld
user/include/: jexos.h  stdio.h  stdlib.h  string.h  unistd.h
user/include/sys/: types.h
user/lib/: crt0.s  stdio.c  stdlib.c  string.c  unistd.c
